fixed some issues in Edit data functionality

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,12 +830,12 @@
     "        print(\"3. Delete a Row\")\n",
     "        print(\"4. Edit Specific Column Data\")\n",
     "        # print(\"5. Fill Missing Data\")\n",
-    "        print(\"6. Rename Columns\")\n",
-    "        print(\"7. Change Data Type of a Column\")\n",
-    "        print(\"8. Sort Data\")\n",
-    "        print(\"9. Filter Data\")\n",
-    "        print(\"10. Remove Duplicates\")\n",
-    "        print(\"11. Save and Return\")\n",
+    "        print(\"5. Rename Columns\")\n",
+    "        print(\"6. Change Data Type of a Column\")\n",
+    "        print(\"7. Sort Data\")\n",
+    "        print(\"8. Filter Data\")\n",
+    "        print(\"9. Remove Duplicates\")\n",
+    "        print(\"10. Save and Return\")\n",
     "        \n",
     "        choice = input(\"Enter Choice: \")\n",
     "        \n",
@@ -884,14 +884,14 @@
     "        #     else:\n",
     "        #         df.fillna(fill_method, inplace=True)\n",
     "        #     print(\"\\nMissing values filled successfully!\")\n",
-    "        elif choice == \"6\":\n",
+    "        elif choice == \"5\":\n",
     "            print(\"\\nRenaming columns:\")\n",
     "            print(\"Current columns:\", list(df.columns))\n",
     "            old_col = input(\"Enter the column name to rename: \")\n",
     "            new_col = input(\"Enter the new column name: \")\n",
     "            df.rename(columns={old_col: new_col}, inplace=True)\n",
     "            print(\"\\nColumn renamed successfully!\")\n",
-    "        elif choice == \"7\":\n",
+    "        elif choice == \"6\":\n",
     "            print(\"\\nChanging data type of a column:\")\n",
     "            col_name = input(\"Enter column name: \")\n",
     "            new_type = input(\"Enter new data type (int, float, str): \")\n",
@@ -905,13 +905,13 @@
     "                print(\"\\nData type changed successfully!\")\n",
     "            except Exception as e:\n",
     "                print(f\"Error changing data type: {e}\")\n",
-    "        elif choice == \"8\":\n",
+    "        elif choice == \"7\":\n",
     "            print(\"\\nSorting data:\")\n",
     "            col_name = input(\"Enter column name to sort by: \")\n",
     "            order = input(\"Enter 'asc' for ascending or 'desc' for descending: \")\n",
     "            df = df.sort_values(by=col_name, ascending=(order == \"asc\"))\n",
     "            print(\"\\nData sorted successfully!\")\n",
-    "        elif choice == \"9\":\n",
+    "        elif choice == \"8\":\n",
     "           print(\"\\nFiltering data:\")\n",
     "           col_name = input(\"Enter column name to filter by: \")\n",
     "\n",
@@ -946,11 +946,11 @@
     "\n",
     "                except ValueError:\n",
     "                    print(\"Error: Filter value type does not match column type!\")\n",
-    "        elif choice == \"10\":\n",
+    "        elif choice == \"9\":\n",
     "            print(\"\\nRemoving duplicates:\")\n",
     "            df.drop_duplicates(inplace=True)\n",
     "            print(\"\\nDuplicates removed successfully!\")\n",
-    "        elif choice == \"11\":\n",
+    "        elif choice == \"10\":\n",
     "            ch=input('Do you want to save this Edited File ?')\n",
     "            if(ch.lower()=='y'):\n",
     "                save_dataset(df)\n",
@@ -965,7 +965,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "import sys\n",
     "# df=pd.read_csv('C:\\\\Users\\\\Shivam\\\\Downloads\\\\archive (3)\\\\covid_toy.csv')\n",
     "# engine = create_engine(\"mysql+pymysql://root:@localhost/data_analysis\")\n",
     "# df.to_sql('covid', con=engine, if_exists=\"replace\", index=False)\n",
@@ -1030,6 +1030,7 @@
     "                u=User(op[1], email, password, 0)\n",
     "                u.setId(op[0])\n",
     "                main()\n",
+    "                sys.stdout.flush()\n",
     "                \n",
     "\n",
     "        elif choice=='2':\n",
