did some formatting in code without testing cause xampp mysql servers is shutting down

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,13 @@
     "from wordcloud import WordCloud\n",
     "import mysql.connector\n",
     "import hashlib\n",
-    "from sqlalchemy import create_engine"
+    "from sqlalchemy import create_engine\n",
+    "import sys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,6 +258,7 @@
     "\n",
     "    save = input('Save General Report? (Y/N): ')\n",
     "    if save.lower()==\"y\":\n",
+    "        sys.stdout.flush()\n",
     "        Save_Genreal_Report(corr_matrix, dup, head, tail, des, null_values, info, shape)\n",
     "\n",
     "\n",
@@ -267,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,39 +680,48 @@
     "    # print(f\"Total Number of Unique Values in {column_name}: \", )\n",
     "    choice=input(\"want to save this repiort (y/n) ?\")\n",
     "    if(choice.lower()=='y'):\n",
+    "        sys.stdout.flush()\n",
     "        save_string_report(df, column_name, top_n)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def Analyze_Data(df):\n",
     "    b=True\n",
     "    while(b):\n",
+    "        print(\"Analyze Data\".center(60, \"*\"))\n",
     "        print(\"1. General Analysis\")\n",
     "        print(\"2. Custom Analysis\")\n",
     "        print(\"3. Return\")\n",
+    "        sys.stdout.flush()\n",
     "        choice=input(\"Enter Choice: \").strip()\n",
     "        if(choice==\"1\"):\n",
+    "           print(\"General Analysis\".center(60, \"*\"))\n",
+    "           sys.stdout.flush()\n",
     "           General_Analysis(df)\n",
     "        elif(choice==\"2\"):\n",
     "            b1=True\n",
     "            while(b1):\n",
-    "                print(\"1. Analyze Two Numeric Columns\")\n",
-    "                print(\"2. Analyze String Column\")\n",
+    "                print(\"Custom Analysis\".center(60, \"*\"))\n",
+    "                print(\"1. Categorical Exploration\")\n",
+    "                print(\"2. Analyze Two Numeric Columns\")\n",
     "                print(\"3. Return\")\n",
+    "                sys.stdout.flush()\n",
     "                choice=input(\"Enter Choice: \").strip()\n",
-    "                if(choice==\"1\"):\n",
+    "                if(choice==\"2\"):\n",
     "                  col1=input('Enter 1st Numeric Column')\n",
     "                  col2=input('Enter 2nd Numeric Column')\n",
+    "                  sys.stdout.flush()\n",
     "                  Custom_Analysis(df, col1, col2, 1)\n",
     "                  \n",
-    "                elif(choice==\"2\"):\n",
+    "                elif(choice==\"1\"):\n",
     "                    # col1=input('Enter 1st Numeric Column')\n",
     "                    col2=input('Enter String Column')\n",
+    "                    sys.stdout.flush()\n",
     "                    plot_string_column(df, col2)\n",
     "                elif(choice==\"3\"):\n",
     "                  b1=False\n",
@@ -725,18 +736,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def Load_Data():\n",
     "    b=True\n",
     "    while(b):\n",
-    "        print(\"1. Analyze CSV File\")\n",
-    "        print(\"2. Analyze SQL Table\")\n",
-    "        print(\"3. Analyze Parquet File\")\n",
-    "        print(\"4. Analyze Excel File\")\n",
+    "        print(\"Load Data\".center(60, \"*\"))\n",
+    "        print(\"1. Load CSV File\")\n",
+    "        print(\"2. Load SQL Table\")\n",
+    "        print(\"3. Load Parquet File\")\n",
+    "        print(\"4. Load Excel File\")\n",
     "        print(\"5. Return\")\n",
+    "        sys.stdout.flush()\n",
     "        choice=input(\"Enter Choice: \").strip()\n",
     "        if(choice==\"1\"):\n",
     "          path = input(\"Enter File Path of CSV File: \")\n",
@@ -758,7 +771,7 @@
     "                  return df\n",
     "              except (FileNotFoundError, Exception) as e:\n",
     "                  print(f\"Error: {e}\")\n",
-    "                  print(\"Parquet File not found. Try again !\")\n",
+    "                  print(\"Table not found. Try again !\")\n",
     "        elif(choice==\"3\"):\n",
     "              path = input(\"Enter File Path of Parquet File: \")\n",
     "              try:\n",
@@ -784,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,9 +805,11 @@
     "    \"\"\"Saves the dataset to a user-specified path.\"\"\"\n",
     "    b=True\n",
     "    while b:\n",
+    "        print(\"Save DataSet\".center(60, \"*\"))\n",
     "        print(\"1. Save as CSV\")\n",
     "        print(\"2. Save as Table in MySQL\")\n",
     "        print(\"3. Exit\")\n",
+    "        sys.stdout.flush()\n",
     "        ch=input('Enter your choice: ')\n",
     "        if(ch=='1'):\n",
     "            save_path = input(\"Enter the path to save the edited CSV file: \")\n",
@@ -802,14 +817,14 @@
     "                df.to_csv(save_path, index=False)\n",
     "                print(f\"\\nDataset saved successfully at {save_path}!\\n\")\n",
     "            except Exception as e:\n",
-    "                print(f\"Error in saving a dataset: {e}\")\n",
+    "                print(f\"Error in saving a dataset as CSV: {e}\")\n",
     "        elif ch=='2':\n",
     "            try:\n",
     "                name=input('Enter name of the table to save DataFrame as: ')\n",
     "                engine = create_engine(\"mysql+pymysql://root:@localhost/data_analysis\")\n",
     "                df.to_sql(name, con=engine, if_exists=\"replace\", index=False)\n",
     "            except Exception as e:\n",
-    "                print(f\"Error in saving a dataset: {e}\")\n",
+    "                print(f\"Error in saving a dataset as Table: {e}\")\n",
     "        elif ch=='3':\n",
     "            b=False\n",
     "        else:\n",
@@ -818,13 +833,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def Edit_Data(df):\n",
     "    b = True\n",
     "    while b:\n",
+    "        print(\"Edit Data\".center(60, \"*\"))\n",
     "        print(\"1. Add a New Row\")\n",
     "        print(\"2. Update an Existing Row\")\n",
     "        print(\"3. Delete a Row\")\n",
@@ -836,6 +852,7 @@
     "        print(\"8. Filter Data\")\n",
     "        print(\"9. Remove Duplicates\")\n",
     "        print(\"10. Save and Return\")\n",
+    "        sys.stdout.flush()\n",
     "        \n",
     "        choice = input(\"Enter Choice: \")\n",
     "        \n",
@@ -923,6 +940,7 @@
     "                print(\"1. Equal to (==)\")\n",
     "                print(\"2. Greater than (>)\")\n",
     "                print(\"3. Smaller than (<)\")\n",
+    "                sys.stdout.flush()\n",
     "                filter_type = input(\"Enter choice (1/2/3): \")\n",
     "\n",
     "                filter_value = input(f\"Enter value to filter {col_name} by: \")\n",
@@ -953,10 +971,12 @@
     "        elif choice == \"10\":\n",
     "            ch=input('Do you want to save this Edited File ?')\n",
     "            if(ch.lower()=='y'):\n",
+    "                \n",
     "                save_dataset(df)\n",
     "            b = False\n",
     "        else:\n",
-    "            print(\"Please Enter a Valid Choice!\")\n"
+    "            print(\"Please Enter a Valid Choice!\")\n",
+    "        sys.stdout.flush()\n"
    ]
   },
   {
@@ -965,25 +985,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "# df=pd.read_csv('C:\\\\Users\\\\Shivam\\\\Downloads\\\\archive (3)\\\\covid_toy.csv')\n",
-    "# engine = create_engine(\"mysql+pymysql://root:@localhost/data_analysis\")\n",
-    "# df.to_sql('covid', con=engine, if_exists=\"replace\", index=False)\n",
-    "\n",
-    "# con=get_connection()\n",
-    "# table='covid'\n",
-    "# sql=f'select * from {table}'\n",
-    "# df = pd.read_sql(sql, con)\n",
-    "# print(df.head())\n",
     "\n",
     "def main():\n",
     "    b=True\n",
     "    while(b):\n",
+    "        print(\"DataVista\".center(60, \"=\"))\n",
     "        print(\"1. Analyze Data\")\n",
     "        print(\"2. Edit Data\")\n",
-    "        print(\"3. Cleaning Data\")\n",
-    "        print(\"4. Sort Folder\")\n",
-    "        print(\"5. Exit\")\n",
+    "        # print(\"3. Cleaning Data\")\n",
+    "        # print(\"4. Sort Folder\")\n",
+    "        print(\"3. Exit\")\n",
+    "        sys.stdout.flush()\n",
     "        choice=input(\"Enter Choice: \")\n",
     "        if(choice==\"1\"):\n",
     "            df = Load_Data()\n",
@@ -993,33 +1005,34 @@
     "            Edit_Data(df)\n",
     "            pass\n",
     "        elif(choice==\"3\"):\n",
-    "            print(3)\n",
-    "            pass\n",
-    "        elif(choice==\"4\"):\n",
-    "            print(4)\n",
-    "        elif(choice==\"5\"):\n",
     "            print(\"Exiting Program...\")\n",
-    "            b=False\n",
+    "            b=False      \n",
     "        else:\n",
     "            print(\"Please Enter Valid Choice !\")\n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "\n",
+    "# main()\n",
     "if __name__=='__main__':\n",
     "    b1=True\n",
     "\n",
     "    while b1:\n",
+    "        print(\"Log In/Sign Up\".center(60, \"*\"))\n",
     "        print(\"1. Log In\")\n",
     "        print(\"2. Sign Up\")\n",
     "        print(\"3. Exit\")\n",
+    "        sys.stdout.flush()\n",
     "        choice=input()\n",
     "        if choice=='1':\n",
+    "            print(\"hello 11111111111111\")\n",
     "            con=get_connection()\n",
     "            cur=con.cursor()\n",
+    "            print('email: ')\n",
     "            email=input('Enter Email: ')\n",
+    "            print(\"email 1111\")\n",
     "            password=input('Enter Password: ')\n",
+    "            print(\"pass\")\n",
     "            encr=hashlib.sha256(password.encode()).hexdigest()\n",
     "            sql= 'select * from users where user_email=%s and user_password=%s'\n",
     "            cur.execute(sql, (email,encr,))\n",
@@ -1029,8 +1042,11 @@
     "            else:\n",
     "                u=User(op[1], email, password, 0)\n",
     "                u.setId(op[0])\n",
-    "                main()\n",
+    "                # print(\"*\"*)\n",
+    "                print(\"Welcome Back\".center(60, \"*\"))\n",
+    "               \n",
     "                sys.stdout.flush()\n",
+    "                main()\n",
     "                \n",
     "\n",
     "        elif choice=='2':\n",
@@ -1050,6 +1066,8 @@
     "            op=cur.fetchone()\n",
     "            if not op:\n",
     "               u=User(name, email, passw, 1)\n",
+    "               \n",
+    "               sys.stdout.flush()\n",
     "               main()\n",
     "            else:\n",
     "                print('User already exists !')\n",
