tested saving df as table in db

--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1025,14 +1025,14 @@
     "        sys.stdout.flush()\n",
     "        choice=input()\n",
     "        if choice=='1':\n",
-    "            print(\"hello 11111111111111\")\n",
+    "            # print(\"hello 11111111111111\")\n",
     "            con=get_connection()\n",
     "            cur=con.cursor()\n",
-    "            print('email: ')\n",
+    "            # print('email: ')\n",
     "            email=input('Enter Email: ')\n",
-    "            print(\"email 1111\")\n",
+    "            # print(\"email 1111\")\n",
     "            password=input('Enter Password: ')\n",
-    "            print(\"pass\")\n",
+    "            # print(\"pass\")\n",
     "            encr=hashlib.sha256(password.encode()).hexdigest()\n",
     "            sql= 'select * from users where user_email=%s and user_password=%s'\n",
     "            cur.execute(sql, (email,encr,))\n",
